[diff_drive_controller] calculate rotation with IMU

--- a/diff_drive_controller/CMakeLists.txt
+++ b/diff_drive_controller/CMakeLists.txt
@@ -4,6 +4,7 @@ project(diff_drive_controller)
 find_package(catkin REQUIRED COMPONENTS
     controller_interface
     nav_msgs
+    sensor_msgs
     realtime_tools
     tf
     urdf
