--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,6 @@
 # See issue https://github.com/ros-controls/ros_control/issues/101#issuecomment-21781620
 # and issue http://answers.gazebosim.org/question/4134/installing-gazebo-19-on-ros-groovy/?answer=4138#post-id-4138
 manifest.xml
+
+# temp files
+*~
