--- a/diff_drive_controller/package.xml
+++ b/diff_drive_controller/package.xml
@@ -17,6 +17,7 @@
 
   <depend>controller_interface</depend>
   <depend>nav_msgs</depend>
+  <depend>sensor_msgs</depend>
   <depend>realtime_tools</depend>
   <depend>tf</depend>
   <depend>urdf</depend>
